fix: stop course feed credits from wrapping on desktop

--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -494,7 +494,7 @@ main .carousel.course div.course-text h3 {
   }
 
   main .carousel.course div.course-text .course-overview p:last-child {
-    max-height: 354px;
+    max-height: 340px;
   }
 }
 
